Fix vertical alignment of heading icon

--- a/scss/_patterns_heading-icon.scss
+++ b/scss/_patterns_heading-icon.scss
@@ -10,7 +10,6 @@
     }
 
     &__header {
-      align-items: center;
       display: flex;
       margin-bottom: $sp-medium;
 
@@ -20,7 +19,6 @@
     }
 
     &__title {
-      @include vf-heading-3;
       margin-bottom: 0;
       margin-top: 0;
     }
